Update website content and assets: Modified README, index.html, favicon, and added jc.png

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta property="og:title" content="J Curve by Avi - Premium Personal Brand Portfolio" />
     <meta property="og:description" content="Building Brands That Scale - From strategy to execution, we help entrepreneurs and creators build premium personal brands." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Maxiemad/avispflio/main/jc.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@jcurvebyavi" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Maxiemad/avispflio/main/jc.png" />
 
     <style>
       body {
