--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J Curve by Avi - Premium Personal Brand Portfolio</title>
-    <meta name="description" content="Building Brands That Scale - From strategy to execution, we help entrepreneurs and creators build premium personal brands that generate real revenue." />
+    <meta name="description" content="Content that Converts. Growth that Sticks- From strategy to execution, we help entrepreneurs and creators build premium personal brands that generate real revenue." />
     <meta name="author" content="J Curve by Avi" />
 
     <!-- Google Fonts -->
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="J Curve by Avi - Premium Personal Brand Portfolio" />
-    <meta property="og:description" content="Building Brands That Scale - From strategy to execution, we help entrepreneurs and creators build premium personal brands." />
+    <meta property="og:description" content="Content that Converts. Growth that Sticks.- From strategy to execution, we help entrepreneurs and creators build premium personal brands." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Maxiemad/avispflio/main/jc.png" />
 
