--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>J Curve by Avi - Premium Personal Brand Portfolio</title>
+    <title>J Curve by Avi</title>
     <meta name="description" content="Content that Converts. Growth that Sticks- From strategy to execution, we help entrepreneurs and creators build premium personal brands that generate real revenue." />
     <meta name="author" content="J Curve by Avi" />
 
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="J Curve by Avi - Premium Personal Brand Portfolio" />
+    <meta property="og:title" content="J Curve by Avi" />
     <meta property="og:description" content="Content that Converts. Growth that Sticks.- From strategy to execution, we help entrepreneurs and creators build premium personal brands." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Maxiemad/avispflio/main/jc.png" />
